fixed z-index in topbar component

--- a/src/styles/base/_util.scss
+++ b/src/styles/base/_util.scss
@@ -7,3 +7,4 @@ $z-index-card: 0;
 $z-index-card-bg: -1;
 $z-index-text: 1;
 $z-index-mobile-nav: 1;
+$z-index-topbar: 99;
